tests/sources/invalid/match/match_duplicate_variant.fire
// Invalid: the same variant is matched twice.
// EXPECT: semantic error

enum Shape {
    Circle(radius: float64),
    Point
}

s: Shape = Shape.Point;
match s {
    Shape.Circle(radius) -> { }
    Shape.Circle(radius: r2) -> { }  //~ ERROR FS-SEM-0001 @5
    Shape.Point -> { }
}
